--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <nav class="navegador">
                 <a href="harrypotter.html">Harry Potter</a>
                 <a href="space.html">Space</a>
-				<a href="#">TEMP 03</a>
+				<a href="malcom.html">Malom</a>
 				<a href="#">TEMP 04</a>
 				<a href="#">TEMP 05</a>
 				<a href="#">TEMP 06</a>
